# scoda_explorer

./: .gitignore  Anaconda 분석환경 구축.md  Anaconda_분석환경_구축.md  README.md  SCODA_worshop  SCODA_worshop.md  marker_db.tsv  pyproject.toml  scoda_viz_practice_workshop.ipynb
Notebooks/: Bi_practice_A_WES_v07_251215.ipynb  Bi_practice_B_RNA-seq_v08_251215.ipynb  Bi_practice_C_RNA-seq-PB_v08_251216.ipynb  ML_practice_01_dataframe_basic_stats_vis_dimred_clustering.ipynb  ML_practice_02_regression_G2F.ipynb  ML_practice_02_regression_G2F_gridsearch.ipynb  ML_practice_02_regression_ex.ipynb  ML_practice_03_linear_prediction.ipynb  ML_practice_04_House_prices_prediction_v03.ipynb  ML_practice_05_classification_ex_plus_ROC.ipynb  ML_practice_06_classification_ex_plus_ROC_heart_failure.ipynb  ML_practice_07_Neural_Net_ex.ipynb  ML_practice_08_CNN.ipynb  ML_practice_09_RNN_seq_pred.ipynb  ML_practice_10_RNN_hihello.ipynb  bio_bigdata_workshop_1A_python_pandas_visualization_practice.ipynb  bio_bigdata_workshop_1B_stats_dimred_clustering_imputation_practice.ipynb  bio_bigdata_workshop_1_python_pandas_bridge_practice.ipynb  bio_bigdata_workshop_2A_regression_practice.ipynb  bio_bigdata_workshop_2B_regression_practice_with_mutation.ipynb  bio_bigdata_workshop_3A_classification_practice_cancerseek.ipynb  bio_bigdata_workshop_3B_classification_practice_tcga_brca.ipynb  bio_bigdata_workshop_4A_ANN_classifier_cancerseek.ipynb  bio_bigdata_workshop_4B_ANN_regressor_ccle_ctrpv2.ipynb  bio_bigdata_workshop_5A_qm9_smiles_representation_learning.ipynb  remove_widgets.ipynb  (+9 more)
Workshop/: kegg_mouse.gmt  (+13 more)
(+22 files in other folders)
