# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scoda-viz"
version = "0.1.2"
description = "Visualization Toolkits for SCODA results."
readme = "README.md"
authors = [{ name = "Seokhyun Yoon", email = "syoon@dku.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["single-cell omics", "bioinformatics"]
dependencies = [
]
# requires-python = "<3.10"

[project.optional-dependencies]
dev = ["numpy", "pandas", "scipy", "scikit-learn", "scikit-network"]

[project.urls]
Homepage = "https://github.com/combio-dku"

[project.scripts]
realpython = "reader.__main__:main"
